pcidss/sw_l3_l4_policy/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "L3-L4 policy to restrict deathstar access to empire ships only"
metadata:
  name: "rule1"
spec:
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: accuknox
        class: tiefighter
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "53"
        protocol: DNS
